styles.css
/* General stuff */

* {
    margin: 0;
    padding: 0;
}

body {
    background-color: #EAE8DC;
}

@font-face {
    font-family: bold-font;
    src: url(./fonts/bold.ttf);
}
  
  @font-face {
    font-family: light-font;
    src: url(./fonts/light.ttf);
}

.background-div {
    position: absolute;
    z-index: -1;
    top: 0;
    height: 0;
    width: 100vw;
    height: 100vh;
    background-image: url(./public/background-big.png);
    background-repeat: no-repeat;
    background-position: center;
    opacity: 0.2;
}

/* Homepage */

.homepage-main-div {
    overflow: hidden;
}

/* How it works */

.main-howdoesitwork-div {
    width: 100vw;
    height: 40vh;
    font-family: light-font;
    color: #E88074;
    text-align: center;
}
  
  .howdoesitwork-heading {
    font-size: 4vh;
    margin-top: 3vh;
}
  
  .howdoesitwork-text {
    line-height: 3.5vh;
    font-size: 3vh;
    padding: 1vh;
}
  
  .margin-bottom {
    margin-bottom: 0.5vh;
    font-size: 2.5vh;
}

/* Header */

.main-header-div {
    width: 100vw;
    height: 11vh;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: bold-font;
    font-size: 3.5vh;
    color: #E85A50;
}

/* Footer */

.bottom-main-div {
    position: fixed;
    z-index: 2;
    bottom: 0;
    height: 7vh;
    width: 100vw;
    background-color: #E88074;
    border-top:2px solid #E85A50;
    overflow: hidden;
}
  
.bottom-div {
    width: 100vw;
    height: 3vh;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    font-family: light-font;
    font-size: 1.6vh;
}
  
.bottom-div02 {
    width: 100vw;
    height: 3vh;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    font-size: 1.6vh;
    font-family: light-font;
    border-top: 2px solid #E88074;
}

.link {
    color: #EAE8DC;
}
  
.bottom-div1 {
    width: 33vw;
    text-align: center;
}
  
.bottom-div2 {
    width: 33vw;
    text-align: center;
}
  
.bottom-div3 {
    width: 33vw;
    text-align: center;
}

/* About us */

.aboutus-div {
    text-align: center;
    color: #E88074;
}
  
.aboutus-heading {
    font-family: bold-font;
    font-size: 4vh;
    margin-bottom: 1.5vh;
    color: #E88074;
}
  
.aboutus-text {
    font-family: light-font;
    font-size: 3vh;
}

/* Privacy Policy & Terms and Conditions */

.privacy-policy-div {
    font-family: light-font;
    text-align: center;
    color: #E88074;
    line-height: 3vh;
    padding-bottom: 11vh;
}
  
a {
    color: #E85A50;
}

/* Blog */

.blog-div {
    text-align: center;
    color: #E88074;
    display: flex;
    flex-direction: column;
}
  
.blog-link {
    font-family: light-font;
    font-size: 3vh;
    color: #E88074;
    margin-bottom: 3vh;
}
  
.blog-post-div {
    padding-bottom: 12vh;
    text-align: center;
    font-family: light-font;
}

/* Email */

.main-email-div {
    width: 100vw;
    height: 23vh;
    font-family: bold-font;
    margin-top: 1.5vh;
    text-align: center;
}
  
.button-label {
    font-size: 3.5vh;
    margin-bottom: 1vh;
    color: #E85A50;
}
  
.number {
    font-size: 3.5vh;
    margin-bottom: 1vh;
    color: #1A191C;
    font-family: light-font;
}
  
.email-input {
    width: 80vw;
    height: 4.5vh;
    outline: none;
    border: 3px solid #8F8D89;
    border-radius: 5px;
    margin-bottom: 2vh;
    background-color: #EAE8DC;
    padding-left: 1vw;
    padding-right: 1vw;
    padding-bottom: 0;
    font-size: 3vh;
    font-family: light-font;
    text-align: center;
}
  
.email-input:focus {
    border: 3px solid #E88074;
}
  
.email-input::placeholder {
    font-family: light-font;
    color: #8F8D89;
    text-align: center;
}
  
.generate-button {
    background-color: #EAE8DC;
    border: 3px solid #8F8D89;
    border-radius: 5px;
    outline: none;
    width: 30vw;
    height: 6vh;
    font-family: light-font;
    font-size: 3vh;
    color: #8F8D89;
    cursor: pointer;
}
  
.generate-button:active {
    border: 3px solid #E88074;
    color: #E88074;
}
  
.number-sent {
    margin-top: 1vh;
    margin-bottom: 1vh;
    font-family: light-font;
}

/* Popup */

.popup-container-div {
    position: absolute;
    z-index: 2;
    top: 0;
    left: 0;
    width: 100vw;
    height: 70vh;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}
  
.popup-main-div {
    position: relative;
    z-index: 2;
    width: 65vw;
    height: 23vh;
    border: 3px solid #8F8D89;
    border-radius: 5px;
    background-color: #D8C3A4;
    margin: auto;
    font-family: light-font;
    font-size: 3.5vh;
    color: #E85A50;
    display: flex;
    flex-direction: column;
    align-items: center;
}
  
.popup-main-div .generate-button {
    position: absolute;
    bottom: 2vh;
}
  
.popup-p-tag {
    margin-top: 1vh;
}
  
.popup-sentin {
    font-size: 2.5vh;
    margin-top: 1vh;
}

.homepage-p {
    font-size: 2.5vh;
}

